--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -14,12 +14,16 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
+cfg-if = "1.0.0"
+scale-info = { git = "https://github.com/paritytech/scale-info", default-features = false, optional = true, features = ["derive"] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [features]
 default = ["std", "v12"]
 v12 = []
+v13 = ["scale-info"]
 std = [
 	"codec/std",
+	"scale-info/std",
 	"serde",
 ]
