--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -15,7 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 cfg-if = "1.0.0"
-scale-info = { git = "https://github.com/paritytech/scale-info", branch = "aj-decode-feature", default-features = false, optional = true, features = ["derive"] }
+scale-info = { git = "https://github.com/paritytech/scale-info", branch = "aj-substrate", default-features = false, optional = true, features = ["derive"] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [features]
