--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -13,9 +13,9 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 cfg-if = "1.0.0"
-scale-info = { git = "https://github.com/paritytech/scale-info", default-features = false, optional = true, features = ["derive"] }
+scale-info = { version = "0.6.0", default-features = false, optional = true, features = ["derive"] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [features]
@@ -26,5 +26,6 @@ std = [
 	"codec/std",
 	"scale-info/std",
 	"scale-info/serde",
+	"scale-info/decode",
 	"serde",
 ]
