Add docs feature

--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -20,10 +20,12 @@ serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [features]
 default = ["std", "v14"]
+docs = ["scale-info/docs"]
 v12 = []
 v13 = []
 v14 = ["scale-info"]
 std = [
+	"docs",
 	"codec/std",
 	"scale-info/std",
 	"scale-info/serde",
