--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -116,10 +116,11 @@ jobs:
           command:                 check
           toolchain:               stable
           args:                    --manifest-path ./frame-metadata/Cargo.toml --no-default-features --features v14
-      - name:                      Checking all versions
+      - name:                      Checking all features
         uses:                      actions-rs/cargo@master
         with:
           command:                 check
           toolchain:               stable
-          args:                    --manifest-path ./frame-metadata/Cargo.toml --no-default-features --features v12,v13,v14
+          args:                    --manifest-path ./frame-metadata/Cargo.toml --no-default-features --all-features
+
 
