--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"] }
 
 [features]
 default = ["std", "v14"]
+convert = ["v13", "v14"]
 v12 = []
 v13 = []
 v14 = ["scale-info"]
