--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,9 @@ codec = { package = "parity-scale-codec", version = "2.0.0" }
 frame-metadata = { version = "14.0.0-rc.2", path = "../frame-metadata", default-features = false }
 scale-info = { version = "0.10.0", default-features = false, optional = true, features = ["derive"] }
 
+[dev-dependencies]
+pretty_assertions = "0.7"
+
 [features]
 default = [
     "frame-metadata/v14",
