Prior to v14 everything was Debug.
Are there any downsides? Unused debug impls will just get optimised away won't they?

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,4 +122,9 @@ jobs:
           command:                 check
           toolchain:               stable
           args:                    --manifest-path ./frame-metadata/Cargo.toml --no-default-features --features v12,v13,v14
-
+      - name:                      Checking fully featured wasm
+        uses:                      actions-rs/cargo@v1
+        with:
+          command:                 check
+          toolchain:               stable
+          args:                    --manifest-path ./frame-metadata/Cargo.toml --no-default-features --features decode,serde_full,v14
