--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -16,7 +16,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 cfg-if = "1.0.0"
 scale-info = { version = "2.0.0", default-features = false, optional = true, features = ["derive"] }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
+serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 
 [features]
 default = ["std", "v14"]
@@ -28,10 +28,20 @@ v12 = []
 v13 = []
 legacy = ["v13", "v12", "v11", "v10", "v9", "v8"]
 v14 = ["scale-info"]
+
+# Serde support without relying on std features
+serde_full = [
+	"scale-info/serde",
+	"serde",
+	"serde/alloc",
+]
+# Scale decode support without relying on std features
+decode = ["scale-info/decode"]
+
 std = [
+	"decode",
+	"serde_full",
 	"codec/std",
 	"scale-info/std",
-	"scale-info/serde",
-	"scale-info/decode",
-	"serde",
+	"serde/std",
 ]
