--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -19,7 +19,7 @@ scale-info = { version = "2.0.0", default-features = false, optional = true, fea
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 
 [features]
-default = ["std", "v14"]
+default = ["std", "v15"]
 v8  = []
 v9  = []
 v10 = []
@@ -28,6 +28,7 @@ v12 = []
 v13 = []
 legacy = ["v13", "v12", "v11", "v10", "v9", "v8"]
 v14 = ["scale-info"]
+v15 = ["scale-info"]
 
 # Serde support without relying on std features
 serde_full = [
