--- a/frame-metadata/Cargo.toml
+++ b/frame-metadata/Cargo.toml
@@ -19,16 +19,16 @@ scale-info = { version = "2.0.0", default-features = false, optional = true, fea
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 
 [features]
-default = ["std", "v14"]
-v8  = []
-v9  = []
-v10 = []
-v11 = []
-v12 = []
-v13 = []
-legacy = ["v13", "v12", "v11", "v10", "v9", "v8"]
-v14 = ["scale-info"]
-v15-unstable = ["scale-info"]
+default = ["std", "current"]
+
+# Feature flag for pre-V14 versions.
+legacy = []
+
+# The current stable metadata versions.
+current = ["scale-info"]
+
+# Unstable next metadata version.
+unstable = ["scale-info"]
 
 # Serde support without relying on std features
 serde_full = [
@@ -36,6 +36,7 @@ serde_full = [
 	"serde",
 	"serde/alloc",
 ]
+
 # Scale decode support without relying on std features
 decode = ["scale-info/decode"]
 
